<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="32dp"
        tools:context=".activities.LoginActivity">



        <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_button"
            android:layout_marginTop="29dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/or"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_border"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"/>


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:background="@drawable/edit_border"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_btn"
            style="@style/ButtonStyleGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="22sp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/forgot_your_password"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/retrieve_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/retrieve_here"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:text="@string/no_account_yet"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/login_test_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/register_here"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            />

    </LinearLayout>

</ScrollView>