<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/reg_background">


    <RelativeLayout
        android:id="@+id/the_hotel_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_image"
        android:paddingBottom="32dp"
       >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.RegisterActivity">


            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/food_plug"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="310dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/register_intro"
                style="@style/ButtonStyleGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="33dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/login_intro"
                style="@style/ButtonStyleGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="33dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_intro" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>





</ScrollView>

